# saturatelimiter

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  tox.toml
.github/workflows/: ci.yml
src/saturatelimiter/: __init__.py  _ratelimit.py  _retry.py  session.py
tests/: conftest.py  test_ratelimit.py  test_retry.py  test_session.py
