[project]
name = "saturatelimiter"
version = "0.1.0"
description = "Concurrent HTTP requests via requests with global 429 Retry-After rate limiting"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Stephen Gallagher", email = "sgallagh@redhat.com" },
]
license = "Apache-2.0"
keywords = ["http", "requests", "rate-limiting", "429", "asyncio", "concurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]
dependencies = [
    "requests>=2.31",
    "tenacity>=8.0",
]

[project.urls]
Homepage = "https://github.com/sgallagher/saturatelimiter"
Repository = "https://github.com/sgallagher/saturatelimiter"
Issues = "https://github.com/sgallagher/saturatelimiter/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "pytest-httpserver",
    "ruff>=0.9",
    "flake8>=7",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
